# unknown-world-public

./: .dockerignore  .editorconfig  .geminiignore  .gitignore  .prettierignore  CLAUDE.md  README.md  code-base.xml  deploy.sh  devpost-about.md  docker-compose.yml  package.json  prettier.config.cjs  request.json
backend/: .env.example  .gitkeep  Dockerfile  debug_api_call.py  debug_real_mode.py  debug_schema_check.py  debug_server_state.py  debug_uvicorn_sim.py  pyproject.toml  pyrightconfig.json  run_full_test.py  start_and_test.py  test_api.py  test_real_vision.json
backend/prompts/: .gitkeep
backend/prompts/image/: scene_prompt.en.md  scene_prompt.ko.md
backend/prompts/scan/: scan_instructions.en.md  scan_instructions.ko.md
backend/prompts/system/: game_master.en.md  game_master.ko.md
backend/prompts/turn/: turn_output_instructions.en.md  turn_output_instructions.ko.md
backend/prompts/vision/: scene_affordances.en.md  scene_affordances.ko.md
backend/src/unknown_world/: __init__.py  main.py
backend/src/unknown_world/api/: __init__.py  ending_report.py  image.py  item_icon.py  scanner.py  turn.py  turn_stream_events.py  turn_streaming_helpers.py
backend/src/unknown_world/artifacts/: __init__.py  ending_report.py
backend/src/unknown_world/config/: __init__.py  economy.py  models.py
backend/src/unknown_world/harness/: __init__.py  replay_runner.py  scenario.py
backend/src/unknown_world/models/: __init__.py  scanner.py  turn.py
backend/src/unknown_world/orchestrator/: __init__.py  conversation_history.py  fallback.py  generate_turn_output.py  mock.py  pipeline.py  prompt_loader.py  repair_loop.py
backend/src/unknown_world/services/: __init__.py  agentic_vision.py  genai_client.py  image_generation.py  image_postprocess.py  image_understanding.py  item_icon_generator.py  rembg_preflight.py
backend/src/unknown_world/storage/: __init__.py  local_storage.py  paths.py  seed.py  storage.py  validation.py
backend/src/unknown_world/validation/: __init__.py  business_rules.py  language_gate.py
backend/tests/: conftest.py  manual_test_image.py  manual_test_rembg.py
backend/tests/fixtures/: image_request_fast.json  image_request_quality.json  turn_request.json
backend/tests/integration/: test_api.py  test_api_ending_report.py  test_item_icon_api.py  test_multiturn_history.py  test_rate_limit_flow.py  test_real_mode_gate.py  test_resolve_vision.py  test_scanner_api.py  test_turn_streaming.py  test_u085_image_api.py
backend/tests/qa/: test_asset_manifest.py  test_u052_manual_verification.py
backend/tests/unit/: test_dotenv_autoload.py  test_image_generation_integration.py  test_image_postprocess.py  test_orchestrator_repair.py  test_u034_verification.py  test_u043_language_gate.py  test_u065_schema_simplification.py  test_u068_reference_image.py  test_u079_economy_low_balance.py  test_u096_consumption.py  test_u136_economy_gains_modellabel.py  test_u137_economy_simulation.py
backend/tests/unit/api/: test_image.py
backend/tests/unit/artifacts/: test_ending_report.py
backend/tests/unit/harness/: test_scenario.py
backend/tests/unit/models/: test_turn.py  test_u078_objectives.py
backend/tests/unit/orchestrator/: test_conversation_history.py  test_generate_turn_output.py  test_mock_orchestrator.py  test_pipeline.py  test_prompt_loader.py  test_repair_loop.py  test_u051_bridge.py  test_u052_render_helpers.py  test_u052_render_integration.py  (+7 more)
(+687 files in other folders)
